resizing counters and layout a bit to prevent typical overlap

--- a/client/Components/GameBoard/Card.scss
+++ b/client/Components/GameBoard/Card.scss
@@ -385,7 +385,7 @@
 
 .flags {
     position: absolute;
-    bottom: -2px;
+    bottom: -4px;
     height: 24px;
     display: flex;
     justify-content: center;
